[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/GameUI.gd" type="Script" id=1]
[ext_resource path="res://levels/level_0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://GameWorld.gd" type="Script" id=4]
[ext_resource path="res://ui/Editor.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Variables.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1366.0
margin_bottom = 788.0
mouse_filter = 2

[node name="Level" type="ViewportContainer" parent="Control"]
margin_top = 20.0
margin_right = 1366.0
margin_bottom = 788.0
mouse_filter = 2
stretch = true
script = ExtResource( 4 )

[node name="GameWorld" type="Viewport" parent="Control/Level"]
size = Vector2( 480, 270 )
handle_input_locally = false
render_target_update_mode = 3

[node name="level" parent="Control/Level/GameWorld" instance=ExtResource( 2 )]

[node name="GameUI" type="Control" parent="Control"]
margin_right = 1366.0
margin_bottom = 788.0
rect_min_size = Vector2( 1366, 788 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="codeEditor" type="Button" parent="Control/GameUI"]
margin_right = 85.0
margin_bottom = 20.0
mouse_filter = 2
text = "Code Editor"

[node name="Editor" parent="Control/GameUI" instance=ExtResource( 7 )]
rect_min_size = Vector2( 314, 152 )
mouse_filter = 2

[node name="varList" type="Button" parent="Control/GameUI"]
margin_left = 1292.0
margin_right = 1362.0
margin_bottom = 20.0
mouse_filter = 2
text = "Variables"

[node name="Variables" parent="Control/GameUI" instance=ExtResource( 8 )]
visible = false
margin_left = 1060.0
margin_top = 20.0
margin_right = -6.0
margin_bottom = -268.0
mouse_filter = 2

[connection signal="pressed" from="Control/GameUI/codeEditor" to="Control/GameUI" method="_on_codeEditor_pressed"]
[connection signal="pressed" from="Control/GameUI/varList" to="Control/GameUI" method="_on_varList_pressed"]
